# PreApply

./: .gitignore  .pre-commit-config.yaml  .preapply-env.yaml.example  LICENSE  README.md  policy.example.yaml  pyproject.toml  setup.cfg
docs/: architecture.md  scoring-algorithm.md
samples/: business_foundation.json  low_risk.json
scripts/ci/: policy-check.sh
scripts/smoke/: preapply_smoke.ps1  preapply_smoke.sh
src/preapply/: __init__.py
src/preapply/ai/: __init__.py  base.py  ollama.py  prompt.py
src/preapply/analysis/: __init__.py  blast_radius.py  cost_analysis.py  recommendations.py  risk_reasons.py  risk_scoring.py  security_exposure.py  shared_resources.py  state_destructive.py
src/preapply/cli/: __init__.py  main.py
src/preapply/cli/commands/: __init__.py  ai.py  analyze.py  ask.py  explain.py  policy.py  report.py  setup.py  summary.py  version.py
src/preapply/cli/utils/: __init__.py  file_resolver.py
src/preapply/config/: __init__.py  aws_resource_patterns.yaml  defaults.yaml  environment.py  manager.py  paths.py
src/preapply/contracts/: __init__.py  core_output.py  risk_attributes.py
src/preapply/graph/: __init__.py  dependency_graph.py
src/preapply/ingest/: __init__.py  models.py  plan_loader.py  plan_normalizer.py  plan_validator.py
src/preapply/policy/: __init__.py  engine.py  loader.py  models.py
src/preapply/presentation/: __init__.py  explainer.py  explanation_ids.py  human_formatter.py
src/preapply/report/: __init__.py  artifact.py  github.py  markdown.py
src/preapply/runtime/: __init__.py  detector.py  models.py  registry.py
src/preapply/utils/: __init__.py  errors.py  logging.py
tests/: __init__.py
tests/ai/: __init__.py  test_advisor.py  test_prompt.py
tests/analysis/: test_blast_radius.py
tests/cli/: test_analyze_command.py
tests/fixtures/: README.md
tests/fixtures/terraform_plans/: high_risk.json  low_risk.json  medium_risk.json
tests/graph/: test_dependency_graph.py
tests/ingest/: test_plan_loader.py
tests/policy/: test_engine.py
tests/report/: __init__.py  test_artifact.py  test_github.py  test_markdown.py
tests/report/fixtures/: core_output.sample.json
